--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -4,10 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>static/img/favicon.ico">
-    <link rel="icon" type="image/png" href="<%= BASE_URL %>static/img/icons/favicon-16x16.png" sizes="16x16">
-    <link rel="icon" type="image/png" href="<%= BASE_URL %>static/img/icons//favicon-32x32.png" sizes="32x32">
-    <link rel="manifest" href="<%= BASE_URL %>static/manifest.json" />
+    <link rel="icon" href=".<%= BASE_URL %>favicon.ico" type="image/x-icon">
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
