--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,10 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-175010364-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-175010364-1');
+  </script>
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href=".<%= BASE_URL %>favicon.ico" type="image/x-icon">
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
